# mongoengine_dsl

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  SYNTAX.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  doc.yml  release.yml  test.yml
authors/: index.html
changelog/: index.html
contributing/: index.html
docs/: index.md  installation.md  ref.md  syntax.md
history/: index.html
installation/: index.html
mongoengine_dsl/: __init__.py  errors.py  listener.py  mongoengine_dsl.py  utils.py
mongoengine_dsl/lexer/: MongoEngineDSL.g4
ref/: index.html
search/: search_index.json
syntax/: index.html
tests/: __init__.py  test_mongoengine_dsl.py  utils.py
